--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,66 @@
 * {
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    padding: 0;    
+    box-sizing: border-box;
     text-decoration: none;
     outline: none;
     border: none;
     text-transform: capitalize;
     transition: all ease-in-out 250ms;
-  }
+}
 
-  .container {
+.container {
     width: 95%;
     max-width: 70em;
     margin: 0 auto;
 }
 
-
 /* TYPOGRAPHY */
+
+
+
+/*          NAVBAR
+=================================*/
+.navbar {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    z-index: 1000;    
+}
+
+.navbar a {
+    padding: 2rem;
+    font-size: 2rem;
+    background: #1a1a1a;
+    color: #fff;
+    text-align: center;
+    transition: .2s linear;
+}
+
+.navbar a i {
+    color: crimson;
+    padding-right: .5rem;
+  }
+  
+  .navbar a:hover {
+    background: crimson;
+    padding-bottom: 6rem;
+  }
+  
+  .navbar a:hover i {
+    color: #fff;
+  }
+
+
+
+/*          MAIN
+==================================*/
+
+/*          ABOUT
+===================================*/
+
+
 
